--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <ul>
                 <li> - Passionate UX/UI designer and frontend developer who successfully transitioned careers.</li>
                 <li> - Brings a fresh perspective with a background in a different field, leveraging diverse experiences.</li>
-                <li> - Completed X number of projects in UX/UI design and frontend development over X years/months.</li>
+                <li> - Completed 10 projects in UX/UI design and frontend development over 1 year.</li>
                 <li> - Skilled in creating intuitive user experiences and translating designs into functional websites.</li>
                 <li> - Demonstrates a strong blend of creativity, problem-solving, and technical skills in design and development.</li>
               </ul>
